tests/success/struct_decl.crema
struct foo {
  int a,
  double b
}
