tests/fail/func_duplicate_name_arg.crema
def int foo( double foo ) {
}
